Fixed some issues with images not loading properly

--- a/my-lms-app/public/index.html
+++ b/my-lms-app/public/index.html
@@ -1,6 +1,8 @@
-<!--STUDENTS:
+<!--
+STUDENTS:
 Ali Chaudhary(30204228)
-Simar Kandola(30205681))-->
+Simar Kandola(30205681))
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
